# quotes-app

./: .env.example  .env.render.template  .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  CONNECTION_FIX.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_READY_FINAL.md  DEPLOYMENT_READY_VERIFIED.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DOCKER_BUILD_FIX.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_LIBRARY.md  Dockerfile  FINAL_DEPLOYMENT_REPORT.md  ISSUES_AND_FIXES.md  LICENSE  NEXT_STEPS.md  PRODUCTION_SECURITY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_FIX_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_FIXES.md  RENDER_DEPLOYMENT.md  RENDER_QUICK_START.md  SETUP_CHECKLIST.md  SETUP_GUIDE.md  START_HERE.md  admin.py  (+9 more)
.github/workflows/: tests.yml
app/: __init__.py  app.py  models.py  scraper.py
app/main/: routes.py
app/templates/: base.html  category.html  index.html
backend/: .env.production  Dockerfile  config.py  init_db.py  requirements.txt  run.py  setup.py  test_endpoints.py
backend/app/: __init__.py  models.py  scraper.py
backend/app/main/: __init__.py  routes.py
frontend/static/: styles.css
frontend/templates/: base.html  category.html  favourites.html  index.html
frontend/templates/templates/: base.html
